<resources>
    <string name="app_name">N07_BT03</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retype">Retype</string>
    <string name="birthdate">Birthdate</string>
    <string name="select">Select</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="hobbies">Hobbies</string>
    <string name="tennis">Tennis</string>
    <string name="futbal">Futbal</string>
    <string name="others">Others</string>
    <string name="reset">Reset</string>
    <string name="sign_up">Sign up</string>
    <string name="exit">Exit</string>
    <string name="female">Female</string>
</resources>
